--- a/templates/gallery.tmpl
+++ b/templates/gallery.tmpl
@@ -23,16 +23,34 @@
       <div class="wide-where-grid-goes">
         <div class="grid-container">
           {{range .Artists}}
-          <div class="grid-item" id="artist-{{.ID}}">
+          <div class="grid-item" id="artist-{{.ID}}" x-data="{ showActions: false }">
             <div class="grid-item-image">
               {{if .Thumb}}<img src="/images/{{.Thumb}}" alt="{{.Name}} thumbnail" loading="lazy">{{else}}<img src="/images/{{.ID}}.jpg" alt="{{.Name}} thumbnail" loading="lazy">{{end}}
             </div>
             <div class="grid-item-content">
               <h3 class="grid-item-title"><!-- <input type="checkbox" class="artist-checkbox" value="{{.Name}}" data-id="{{.ID}}"> -->
                <input type="checkbox" class="artist-checkbox" value="{{.Name}}" data-id="{{.ID}}" x-on:change="if ($el.checked) $dispatch('add-artist', {name: $el.value, id: $el.dataset.id})"> <a href="https://www.google.com/search?q=art+by+{{.Name}}" target="_blank">{{.Name}}</a></h3>
-              <p class="grid-item-description">{{.Description}}</p>
+              <p class="grid-item-description">{{.Description}}
+                <a href="#" @click.prevent="showActions = !showActions" class="action-trigger" title="Actions">⋯</a>
+
+              </p>
+              <div x-show="showActions" x-transition
+                   @click.away="showActions = false"
+                   class="action-links">
+                <a href="#" hx-get="/artists/{{.ID}}/edit"
+                   hx-target="#edit-form"
+                   hx-swap="innerHTML"
+                   class="action-link">edit</a><br>
+                <a href="#" hx-post="/artists/{{.ID}}/delete"
+                   hx-target="closest .grid-item"
+                   hx-swap="outerHTML"
+                   hx-confirm="Delete {{.Name}}?"
+                   class="action-link">delete</a>
+              </div>
             </div>
           </div>{{end}}
+
+
         </div>
       </div>
 
