--- a/templates/gallery.tmpl
+++ b/templates/gallery.tmpl
@@ -239,7 +239,7 @@ document.addEventListener('alpine:init', () => {
         </label>
         <div style="display: flex; gap: 0.5rem;">
             <button type="submit">Save Changes</button>
-            <button type="button" class="secondary" onclick="document.getElementById('edit-form-target').innerHTML = '<p>Click &quot;edit&quot; on a card above to load its data here.</p>'">All Done</button>
+            <button type="button" class="secondary" onclick="document.getElementById('edit-form-target').innerHTML = '<p>Click &quot;edit&quot; on a card above to load its data here.</p>'">Cancel</button>
         </div>
     </div>
 </form>
